--- a/style.css
+++ b/style.css
@@ -6,23 +6,56 @@
     box-sizing: border-box;
 }
 
-.container {
-    display: flex;
-
-    background-color: #1e293b;
+body {
     height: 100vh;
-    width: 100vw;
-    padding: 10px;
-
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.item {
-    background-color: #7e22ce;
-    margin: 10px;
-    color: #fff;
-    font-size: 22px;
+main {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 80%;
+    gap: 10px;
+}
+
+section {
+    border: 3px solid #525252;
     border-radius: 5px;
-    width: 100px;
-    height: 100px;
+
+    display: flex;
+    flex-basis: 250px;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
+ul {
+    margin: 30px;
+}
+
+.salary {
+    display: flex;
+    align-items: center;
+}
+
+h2 {
+    font-size: 2.5rem;
+    text-align: center;
+    background-color: #52525b;
+    color: white;
+    padding: 10px;
+}
+
+h3 {
+    margin: 20px;
+    background-color: #84cc16;
+    color: white;
+    padding: 3px;
+    border-radius: 3px;
+}
+
+section:nth-child(3) h2 {
+    background-color: #6d28d9;
 }
